# data_emulator

./: Dockerfile  README.md  cli.py  docker-compose-dev.yaml  docker-compose.yaml  pyproject.toml
settings/: settings.toml
src/app/: cli.py  config.py  context.py
src/domain/: data_generator.py  database.py  ddl_extractor.py  ddl_extractors.py  exception.py  schema_extractor.py  synthetic_data_uploader.py
src/infrastructure/: ddl_extractors.py  extractors.py  schema_extractor.py  sdv_data_generator.py  synthetic_data_uploaders.py
src/usecase/: single_table_usecase.py
tests/: e2e_test.py
tests/init_migrations/: postgres_db_init_migrations.sql  sample_postgres_db_init_migrations.sql  synthetic_postgres_db_init_migrations.sql
