[build-system]
requires = ["setuptools", "setuptools-scm"]
build-backend = "setuptools.build_meta"

[project]
name = "data_emulator"
version = "0.1"
requires-python = ">=3.10"
dependencies = [
    'sdv==1.4.0',
    'pandas==2.1.0',
    'psycopg2-binary==2.9.7',
    'click==8.1.3',
    'dynaconf==3.2.0',
    'pytest==7.0.0',
]

[tool.setuptools]
py-modules = []
